# OpenGLKickoff

./: .gitignore  CMakeLists.txt  README.md  main.c
core/: core.c  core.h  input.c  input.h  io.c  io.h  window.c  window.h
ext/cglm/: CMakeLists.txt
ext/cglm/test/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/glfw-3.4/docs/html/: jquery.js
graphics/: buffer.c  buffer.h  camera.h  mesh.h  shader.c  shader.h  utils.c  utils.h
local/shaders/: default_frag.frag  default_frag.glsl  default_vertex.glsl
